--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-confetti": "^6.1.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3",
-    "styled-components": "^6.1.8"
+    "styled-components": "^6.1.8",
+    "use-history": "^1.4.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.56",
